--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,7 +13,9 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.9",
+    "com.unity.xr.management": "4.2.1",
+    "com.unity.xr.oculus": "3.0.2",
+    "com.unity.xr.openxr": "1.4.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
